objects/zoom_app__Zoom_Webinar_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__Attentiveness_Score__c</fullName>
        <label>Attentiveness Score</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Duration_HH_Mi_SS__c</fullName>
        <label>Duration(HH:Mi:SS)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Time__c</fullName>
        <label>Join Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Leave_Time__c</fullName>
        <label>Leave Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__UUID__c</fullName>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zoom_app__User_Id__c</fullName>
        <label>User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar_Panelist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar Panelist</label>
        <referenceTo>zoom_app__Zoom_Webinar_Panelist__c</referenceTo>
        <relationshipLabel>Zoom Webinar Attendees</relationshipLabel>
        <relationshipName>Zoom_Webinar_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar_Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar Registrant</label>
        <referenceTo>zoom_app__Zoom_Webinar_Registrant__c</referenceTo>
        <relationshipName>Zoom_Webina_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Webinar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Webinar</label>
        <referenceTo>zoom_app__Zoom_Webinar__c</referenceTo>
        <relationshipLabel>Zoom Webinar Attendees</relationshipLabel>
        <relationshipName>Zoom_Webinar_Attendee</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zoom Webinar Attendee</label>
    <listViews>
        <fullName>zoom_app__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Webinar-Att-{0000}</displayFormat>
        <label>Zoom Webinar Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinar Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>